Fixed some padding/spacing issues

--- a/portfolio/src/app/about/about.component.scss
+++ b/portfolio/src/app/about/about.component.scss
@@ -37,12 +37,15 @@
     }
   }
 
-  .middle-profiles {
-    margin-top: 55px;
+  .first-profile {
+    margin-top: 25px;
+  }
+
+  .middle-profile {
+    margin-top: 100px;
   }
 
   .about {
-    margin-top: 25px;
     .headshot-container {
       .headshot {
         border-radius: 8px;
